[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
futures    = "0.3.15"
structopt  = "0.3"
tokio         = { version = "1.7",  features = [ "macros", "io-util", "time", "process", "sync", "signal", "rt-multi-thread"] }
url        = "*"
# mbedtls = { version = "0.8.1", optional = true }
# mbedtls-sys-auto = "*"
psa-crypto = "0.9.0"
dns-lookup = "1.0.8"

[dev-dependencies]
tokio-test    = "*"


#
# Local Variables:
# mode: rust
# compile-command: "cargo build"
# End:


