[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt  = "0.3"
url        = "*"
mbedtls    = { version = "0.8.1" }
mbedtls-sys-auto = "*"
psa-crypto = "0.9.0"
dns-lookup = "1.0.8"

[dev-dependencies]


#
# Local Variables:
# mode: rust
# compile-command: "cargo build"
# End:


