[package]
name = "bootstrap"
version = "0.9.0"
edition = "2021"

[dependencies]
structopt  = "0.3"
url        = "*"
mbedtls    = { version = "0.11.0" }
dns-lookup = "1.0.8"
ureq       = { version = "*", default-features = false, features = [], path="/ssw/projects/trentonio/ureq" }
http       = { version = "*", path="/ssw/projects/pandora/UPSTREAM/rust-http" }
# minerva-voucher = { path = "/ssw/projects/trentonio/minerva-voucher" }
# zeroize = "1.3.0"

[dev-dependencies]


#
# Local Variables:
# mode: rust
# compile-command: "cargo build"
# End:


